# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: run-tests.yaml
gendiff/: __init__.py  cli.py  diff_generator.py  difference.py  error_constants.py  generate_diff.py  io.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_difference.py  test_exceptions.py  test_formatters.py  test_generate.py  test_generate_diff.py
tests/comparisons/: stylish.txt
tests/fixtures/: after.json  after.yml  before.xml  deff.py  diff.py
tests/fixtures/comparisons/: json.json  plain.txt  stylish.txt
