[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["nanitll <pasha-s98@ya.ru>"]
packages = [
    {include = "gendiff"},
]
[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"