[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The Difference Generator"
authors = ["nanitll <pasha-s98@ya.ru>"]
packages = [
    {include = "gendiff"},
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Topic :: Utilities",
]
repository = "https://github.com/agmrv/python-project-lvl2"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"